--- a/Style/style.css
+++ b/Style/style.css
@@ -1,14 +1,15 @@
-@import url(‘https://fonts.googleapis.com/css2?family=Alata&display=swap’);
-@import url(‘https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap’);
+@import url('https://fonts.googleapis.com/css2?family=Alata&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Square+Peg&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Mouse+Memoirs&family=Square+Peg&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 :root{
     --ff-alata: 'Alata', sans-serif;
     --ff-josefin: 'Josefin Sans', sans-serif;
     --ff-squarePeg: 'Square Peg', sans-serif;
     --ff-Mouse: 'Mouse Memoirs', sans-serif;
     --ff-squarePeg2: 'Square Peg', cursive;
+    --ff-roboto: 'Roboto', sans-serif;
 
     --clr-khaki-web: #c1b098;
     --clr-thistle: #e9d2f4;
@@ -501,5 +502,79 @@ a:hover{
     font-family: var(--ff-alata);
     font-size: 16px;
     padding: 25px;
+}
+.project-details{
+    top: 0;
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    z-index: 10000;
+    background-color: rgba(0, 0, 0, 0.3);
+    display: none;
+}
+
+.card-project-details{
+    width: 80%;
+    height: 80vh;
+    background-color: var(--clr-jet);
+    margin: auto;
+    border-radius: 25px;
+    color: white;
+    padding: 50px;
+    overflow-y: scroll;
+    font-family: var(--ff-alata);
+    border: 2px solid white;
+}
+
+.iClose{
+    color:red;
+    font-size: 60px;
+    font-family: var(--ff-squarePeg);
+    font-weight: 600;
+    cursor: pointer;
+    top: 0;
+    left: 0px;
+    position: fixed;
+    background-color: rgba(0,0,0,0.7);
+    padding: 0px 20px 0px 5px;
+}
+
+.project-details-image{
+    border: 5px solid white;
+    margin: 25px;
+}
+
+.project-details-image img{
+    width: 100%;
+    height: 100%;
+}
+
+.project-details-decscription{
+    width: 50%;
+    font-size: 18px;
+}
+
+.project-list li{
+    list-style: disc;
+}
+
+.project-title-card{
+    text-align: center;
+    margin: 50px 0;
+    font-size: 30px;
+}
+
+.project-list{
+    padding-left: 25px;
+    display: block;
+}
+.project-detail-responsive{
+    display: flex;
+    align-items: center;
+}
+@media only screen and (max-width: 992px){
+    .project-details-decscription{
+        width: 100%;
+    }
 }
 
